# ChangeLog for sys-apps/usbredir
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/usbredir/ChangeLog,v 1.29 2013/02/02 23:09:48 ago Exp $

  02 Feb 2013; Agostino Sarubbo <ago@gentoo.org> usbredir-0.4.4.ebuild,
  usbredir-0.6.ebuild:
  Add ~arm, wrt bug #449220

  25 Jan 2013; Agostino Sarubbo <ago@gentoo.org> usbredir-0.4.4.ebuild:
  Stable for x86, wrt bug #453284

  25 Jan 2013; Agostino Sarubbo <ago@gentoo.org> usbredir-0.4.4.ebuild:
  Stable for amd64, wrt bug #453284

*usbredir-0.4.4 (12 Jan 2013)

  12 Jan 2013; Doug Goldstein <cardoe@gentoo.org> +usbredir-0.4.4.ebuild:
  Add version for qemu 1.2 and lower.

  06 Jan 2013; Agostino Sarubbo <ago@gentoo.org> usbredir-0.6.ebuild:
  Add ~sparc, wrt bug #449220

  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> usbredir-0.6.ebuild:
  Add ~alpha, wrt bug #449220

  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> usbredir-0.6.ebuild:
  Add ~ia64, wrt bug #449220

  31 Dec 2012; Agostino Sarubbo <ago@gentoo.org> usbredir-0.6.ebuild:
  Add ~ppc64, wrt bug #449220

  31 Dec 2012; Agostino Sarubbo <ago@gentoo.org> usbredir-0.6.ebuild:
  Add ~ppc, wrt bug #449220

*usbredir-0.6 (17 Dec 2012)

  17 Dec 2012; Samuli Suominen <ssuominen@gentoo.org> +usbredir-0.6.ebuild:
  Version bump.

*usbredir-0.5.1 (25 Sep 2012)

  25 Sep 2012; Samuli Suominen <ssuominen@gentoo.org> +usbredir-0.5.1.ebuild:
  Version bump.

  08 Sep 2012; Samuli Suominen <ssuominen@gentoo.org> usbredir-0.5.ebuild:
  Set CFLAGS to have at least -Wno-error because upstream refused to fix the
  broken configure.ac logic wrt
  http://bugs.freedesktop.org/show_bug.cgi?id=54643

*usbredir-0.5 (08 Sep 2012)

  08 Sep 2012; Samuli Suominen <ssuominen@gentoo.org> +usbredir-0.5.ebuild:
  Version bump.

  07 Sep 2012; Samuli Suominen <ssuominen@gentoo.org> -usbredir-0.3.3.ebuild:
  old

  20 Jun 2012; Jeff Horelick <jdhore@gentoo.org> usbredir-0.4.3.ebuild:
  marked x86 per bug 422195
