@@ -1,4 +1,7 @@
-DIST usbredir-0.4.3.tar.bz2 299163 SHA256 f2cbcc67926c2275837143485407a57cf4c3fda52d199cbb58f73d57a6988f9c
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST usbredir-0.4.3.tar.bz2 299163 SHA256 f2cbcc67926c2275837143485407a57cf4c3fda52d199cbb58f73d57a6988f9c SHA512 ed27bb4e70e063bd06339943b670f33b2aa3653d64e1a9cc0c52d74356e5c523f0812446f830ea85af8a95b4019ee27304baa7618ce9c0de56ed7401f2d39b94 WHIRLPOOL 3e8293bd9decd33b08f38edfa53a73caa1001f84f4c47bb32dc3cf6fb7c9ecd629d0ec7289518a9044b6363bf6923054d23b398279266be7de15e319d383520d
 DIST usbredir-0.4.4.tar.bz2 301660 SHA256 252c9031ab9db200d3e4f55f99e7ba0a35f576e1f3ff07e53895e7151d2457d5 SHA512 09f84779f9cc8a181d99d1f69864056ea38af1e0ffb8339489732b3e1d525c73101f7f630a8e6108dbae0e29cd1a30327e627b11c629fcc0077dc4234c294461 WHIRLPOOL 7d19f7d7308060d507588f0607a7d7d8837ff9eba06d177a4b4ddcae0715940a3d694a1b1c7fc46063ce8be6e0bcc0ab741baadf8156e8e16b3f3f47df42ab07
 DIST usbredir-0.5.1.tar.bz2 305067 SHA256 e0ce8b9503d463f9077310e8d0d00cd50e8972f4814dc4643f652506d4a9129b SHA512 b9aaced69716b673fb8ed41679c234a0c0453935694bfec2209cb6924ed88efebd9c9be7dffb516cf3d7848c7e5a99623062fe236e9056285b9876701718d033 WHIRLPOOL 495da31fe25f77b868b489b5598518adff2b6aae6824ad3db68266f3262ed690ec86925666013e1a679386be78cefec548dc772948ca760fa176041c912e0cd2
 DIST usbredir-0.5.tar.bz2 303095 SHA256 3f855dd70b3af0e8fd8ab7ab6b7e45f51bd4a28b4ef606e8349b7b2188edb201 SHA512 326f02bc7b29dacd61f7acdd8c76dd61d0294d47f164bf4f8241bc04ba5da5280ab4ebc0e413d3b4f482db0fb7159486d30beae2fcd4434676ad85045ac3f461 WHIRLPOOL 2fc79c541990419e42803f91db2dc62bc3161c798b27ac3a1d2923ed749af52dbd51cf3454d74f6665b468862d8580e34a4f2bc8877a1fedeebb9b501f62edea
@@ -8,5 +11,17 @@ EBUILD usbredir-0.4.4.ebuild 846 SHA256 f5c3edf8b15ca54921fcd54d9481b3342b356893
 EBUILD usbredir-0.5.1.ebuild 913 SHA256 fd560360bb9ad64ca374d9e1b49305c8df33fe33e8ac5b505d9ef3070b181cc8 SHA512 5d1649248f74458fb25dc48cfb353ce83821cb4dbc0d2867e7388cc74c69c3fce7cba3b64d56a469744ed8b7494a855933f5985868c7c7c26afa6441c9c4ab44 WHIRLPOOL fdbdb150c2c75965b4cbcd0069537992b8e3422dd4ec629d15b03843221acdb53a14b80cebb6285a12ec4fdc2a8e3e62b0efb8ac98d983c9fe223839e5895261
 EBUILD usbredir-0.5.ebuild 911 SHA256 f503c47179dc4811c134c6413200ff4219cbbe0a502561084aa682ba36a1e7e1 SHA512 3c78576130843cb05715fda09fe05e2f37e425d33a88182b23f78161cb732c5ee08a00dde58d436d9ffc59b605f254dd9108acf14d1b73b31c2d7e50dc0789d5 WHIRLPOOL b52d04409b727279099e7bc519c58f27acd1ccdb758a7625ca4eba590505acf5e61328403778ebe0be4a5311e15a658e794bece42dea22d41873dac9556eb86a
 EBUILD usbredir-0.6.ebuild 942 SHA256 282ab63f83fbf2e9afcf6bd340bc2df332b2d2b8dd30329b3ed33528c1deb2bd SHA512 ae9a88b889e37dbe4716ced3bb8c1704579cb5e2ba655a982270704521d31e8907965b8866c2f1180ecae4a8b3c2367e36a02b9acb0d2da7bb12d9f25fd590d9 WHIRLPOOL c7f20ff39a72d84a9025451d113ce7ddaabd45f18f82ffdd9d644171396a0ae232235476d30aad20bd4fae46c51355f1c639ca01290c871f249b9108524a3d6d
-MISC ChangeLog 3715 SHA256 0b937035b0a80f56fcfc542d99691efe55a5c159e40edb07272357a82a745eac SHA512 a7ef396feb29ba3b3a32c2fa9dd039faf20498f0878b3e6c1615e689bcd0836e1e121712f5d0e11ab1c63cc38dca783490dc403a7e55a35c9ae0e5ab0afcc7c9 WHIRLPOOL 7a61a51149469d27f1140bd415fe3da2f96ac29008ac678bde8dc55e7773eef24990db32b4ed379b1cfa7c4d695484e18b580c9fa5f394bf201db84b20c87341
+EBUILD usbredir-9999.ebuild 955 SHA256 5d88756a9da0ce0066eaf48cd6a51fb51e9ee6c2f8708b7fa0acbaeaa833d876 SHA512 d19e9c56562f3489f38caa6c8aed76ac43e0916aeb0af7a1094d9332febd8f5ae7af892e90f53cd2a595f64824f0723e52aff841677c93fd7c355d12fcfd2a8a WHIRLPOOL 3945ba0749315af53c0c9c439b6a0dc2ce8108826080186c3ea0f48e2ed0b3d6b52927e8b515178f3dbf6a0587025827c731baa308757671a1a8226269e44086
+MISC ChangeLog 3880 SHA256 94c8d7bed8bb2ba71989ab6a89622c65c426d79abc5bf56a68e4ef79abc1346e SHA512 0fd4b2ec813de9294361b9848562c42a9084b4821e0b680cce6e7382ef48de78b453aceea7b74ee6a5920fe2eeed3a7b6913ffaddbc6333d1c625ee0ff75890b WHIRLPOOL f4de62c67c06520dc8cea5d9e687dccecd2db7b88537e2ad3b32d2dc42ed0b13e208bac8c5519232e691f3536a5a154021efc04e10d0f8fa9ab9830fcdf4c813
 MISC metadata.xml 182 SHA256 f1459723f6edbdb3e6997bdf6619036b42297687e8667c11e068d9426854c8ec SHA512 a9409a5434e90c5cf61d90aced85261c9dbc7b089a3c556a7949f36977f71c5a84880e28fadea885ad0780eaa82879a04991e1990e52bdc93d3f55a35d960ca8 WHIRLPOOL 90b0d24804d8ee977ae30ea865739624c4f43e920b96f18425fcfbe0708c1183f6c45b7de75cf7ebb55d02f8304971885fdb0d49502dadb224f8e9397fe8d4d5
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQEcBAEBCAAGBQJRMFqeAAoJEB58/HceDKhfmv0IAIwcOG5kNxEZedxmp/V4IzDh
+yJz72zlpbYT9bFShVWjoYnrGBvwggPLiVpYCV9Ab/U35S5zpcRxZOCkqSBVZdumL
+dYLYG/yJ9Q5nOmQ6nHOl0q/TPyYCEoPRQemsvmem40Ms/wmAP3285kiY499iMbK0
+rzTJtXBQQAS6qyIgdKIgsA/M1UWnAxx/GQ/lo+bCjb3HE3f0dOTSw8JpbHbSL7rk
+312FtYm6wHQ61ySOu10/iigfre0rjclWSXGB8Tygbn609dl48WscQBVHnd7azSJR
+TRTWFaFPa27clF9tuzVvP6p6WFO80jdH5eiIel43A/eKb9UgDI1drRVS/DlMbsI=
+=apyz
+-----END PGP SIGNATURE-----
