@@ -1,0 +1,38 @@
+# Copyright 1999-2013 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/usbredir/usbredir-9999.ebuild,v 1.1 2013/03/01 07:37:01 dev-zero Exp $
+
+EAPI=5
+
+inherit eutils flag-o-matic autotools git-2
+
+DESCRIPTION="A simple TCP daemon and set of libraries for the usbredir protocol (redirecting USB traffic)"
+HOMEPAGE="http://spice-space.org/page/UsbRedir"
+EGIT_REPO_URI="http://anongit.freedesktop.org/git/spice/usbredir.git"
+
+LICENSE="GPL-2 LGPL-2.1"
+SLOT="0"
+KEYWORDS=""
+IUSE="static-libs"
+
+RDEPEND="virtual/libusb:1"
+DEPEND="${RDEPEND}
+	virtual/pkgconfig"
+
+DOCS="ChangeLog README* TODO *.txt"
+
+EGIT_BOOTSTRAP="eautoreconf"
+
+src_configure() {
+	# http://bugs.freedesktop.org/show_bug.cgi?id=54643
+	append-cflags -Wno-error
+	econf $(use_enable static-libs static)
+}
+
+src_install() {
+	default
+	prune_libtool_files
+
+	# noinst_PROGRAMS
+	dobin usbredirtestclient/usbredirtestclient
+}
